fix: scrollbars

--- a/packages/snippets/src/components/snippet-viewer/content/index.css
+++ b/packages/snippets/src/components/snippet-viewer/content/index.css
@@ -10,8 +10,10 @@
 .snippet-viewer-content__inner {
   padding: 1rem;
   margin: 0;
+  overflow: visible;
 }
 
 .snippet-viewer-content__inner .shiki {
   margin: 0;
+  overflow: visible;
 }
